change name hooksjs to nucleun-hooks

--- a/examples/index.html
+++ b/examples/index.html
@@ -10,7 +10,7 @@
   <input id="lastName" name="lastName" type="text">
   <button id="user-update" onclick="update()">Update user</button>
 
-  <script src="../dist/hooksjs.min.js"></script>
+  <script src="../dist/nucleun-hooks.min.js"></script>
   <script>
     const { Hooks } = Hooksjs;
 
